# server/controllers/player.js
@@ -2,6 +2,16 @@ const Player = require('../models/player')
 
 module.exports = app => {
     // Get
+    app.get('/players', async(req, res) => {
+        // #swagger.tags = ['Player']
+        // #swagger.description = 'Get all players.'
+        const players = await Player.getAllPlayers();
+        res.header('Access-Control-Expose-Headers', 'X-Total-Count')
+        res.set('Content-Type', 'application/json');
+        res.set('x-total-count', players.length);
+        res.send(players);
+    });
+
     app.get('/players/:id', async (req, res) => {
         // #swagger.tags = ['Player']
         // #swagger.description = 'Gets an existing player.'
@@ -10,10 +20,22 @@ module.exports = app => {
         res.send(p);
     });
 
-    app.get('/players', async(req, res) => {
+    app.get('/players/occupation/:occupation', async(req, res) => {
         // #swagger.tags = ['Player']
-        // #swagger.description = 'Get all players.'
-        const players = await Player.getAllPlayers();
+        // #swagger.description = 'Gets players by occupation.'
+        // #swagger.parameters['occupation'] = { description: 'Player\'s occupation.' }
+        const players = await Player.getPlayersByOccupation(req.params.occupation);
+        res.header('Access-Control-Expose-Headers', 'X-Total-Count')
+        res.set('Content-Type', 'application/json');
+        res.set('x-total-count', players.length);
+        res.send(players);
+    });
+
+    app.get('/players/skintone/:skin_tone', async(req, res) => {
+        // #swagger.tags = ['Player']
+        // #swagger.description = 'Gets players by skin tone.'
+        // #swagger.parameters['skin_tone'] = { description: 'Player\'s skin tone.' }
+        const players = await Player.getPlayersBySkinTone(req.params.skin_tone);
         res.header('Access-Control-Expose-Headers', 'X-Total-Count')
         res.set('Content-Type', 'application/json');
         res.set('x-total-count', players.length);
@@ -31,7 +53,6 @@ module.exports = app => {
                type: 'Player',
                schema: { $ref: "#/definitions/addPlayer" }
         } */
-
         const player = req.body;
         const p = await Player.insertPlayer(player);
 
